# GAMS_public

./: .gitignore  LICENSE  README.md
SLZ_to_HDF5_mri/: CMakeLists.txt  Mesh.hpp  SLZ_to_HDF5_mri.cpp  SLZ_to_HDF5_mri.h  h5_writer.hpp  precision.hpp  slz.hpp  xdmf_writer.hpp
Test_Object/: Shell000.stl  Shell001.stl  Shell002.stl  Shell003.stl  Shell004.stl  Shell005.stl  Shell006.stl  Shell007.stl  Shell008.stl  Shell009.stl  Shell010.stl  Shell011.stl  Shell012.stl  Shell013.stl  Shell014.stl  Shell015.stl  Shell016.stl  Shell017.stl  Shell018.stl  Shell019.stl  Shell020.stl  Shell021.stl  Shell022.stl  Shell023.stl  Shell024.stl  Shell025.stl  Shell026.stl  Shell027.stl  Shell028.stl  Shell029.stl  Shell030.stl  Shell031.stl  Shell032.stl  Shell033.stl  Shell034.stl  Shell035.stl  Shell036.stl  Shell037.stl  Shell038.stl  Shell039.stl
test/: SE_90TE010TR2500_ap1_dz5-0_N128.seq  SE_90TE010TR2500_ap1_dz5-0_N64.seq  SE_90TE010TR5000_ap1_dz1-1_N128.SIG  SE_90TE010TR5000_ap1_dz1-1_N128.seq  SE_90TE010TR5000_ap1_dz5-0_N128.seq  SE_90TE010TR5000_ap1_dz5-0_N64.seq  SE_90TE020TR2500_ap1_dz5-0_N128.seq  SE_90TE020TR2500_ap1_dz5-0_N64.seq  SE_90TE020TR5000_ap1_dz5-0_N128.seq  SE_90TE020TR5000_ap1_dz5-0_N64.seq  SE_90TE050TR2500_ap1_dz5-0_N128.seq  SE_90TE050TR2500_ap1_dz5-0_N64.seq  SE_90TE050TR5000_ap1_dz5-0_N128.seq  SE_90TE050TR5000_ap1_dz5-0_N64.seq  SE_90TE120TR2500_ap1_dz5-0_N128.seq  SE_90TE120TR2500_ap1_dz5-0_N64.seq  SE_90TE120TR5000_ap1_dz5-0_N128.seq  SE_90TE120TR5000_ap1_dz5-0_N64.seq  SE_90TE320TR2500_ap1_dz5-0_N128.seq  SE_90TE320TR2500_ap1_dz5-0_N64.seq  (+6 more)
(+38 files in other folders)
